# corny-commons

./: .gitignore  LICENSE  README.md  __init__.py  file_manager.py  pyproject.toml
.github/workflows/: python-publish.yml
src/corny_commons/: console_graphics.py
src/corny_commons.egg-info/: PKG-INFO  SOURCES.txt
src/corny_commons/util/: web.py
util/: __init__.py  currency.py  polish.py  web.py
