[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corny_commons"
version = "1.0.1"
authors = [
  { name="Konrad Guzek", email="konrad@guzek.uk" },
]
description = "A project containing packages common to various other Python projects."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kguzek/corny-commons"
"Bug Tracker" = "https://github.com/kguzek/corny-commons/issues"
